--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 composer.phar
 /vendor/
+api/tests/_output/*
+api/tests/_support/_generated
+api/runtime/*
+
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
