--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,8 @@
         "yii\\composer\\Installer::postCreateProject": {
             "setPermission": [
                 {
-                    "runtime": "0777",
-                    "web/assets": "0777",
-                    "yii": "0755"
+                    "api/runtime": "0777",
+                    "api/yii": "0755"
                 }
             ]
         }
