--- a/api/tests/functional.suite.yml
+++ b/api/tests/functional.suite.yml
@@ -1,12 +1,13 @@
 # Codeception Test Suite Configuration
-#
-# Suite for functional tests
-# Emulate web requests and make application process them
-# Include one of framework modules (Symfony2, Yii2, Laravel5) to use it
-# Remove this suite if you don't use frameworks
 
-actor: FunctionalTester
+# suite for functional (integration) tests.
+# emulate web requests and make application process them.
+# (tip: better to use with frameworks).
+
+# RUN `build` COMMAND AFTER ADDING/REMOVING MODULES.
+#basic/web/index.php
+class_name: FunctionalTester
 modules:
     enabled:
-        # add a framework module here
-        - \Helper\Functional
+      - Filesystem
+      - Yii2
