--- a/api/tests/unit.suite.yml
+++ b/api/tests/unit.suite.yml
@@ -1,9 +1,11 @@
 # Codeception Test Suite Configuration
-#
-# Suite for unit or integration tests.
 
-actor: UnitTester
+# suite for unit (internal) tests.
+# RUN `build` COMMAND AFTER ADDING/REMOVING MODULES.
+
+class_name: UnitTester
 modules:
     enabled:
-        - Asserts
-        - \Helper\Unit
+      - Asserts
+      - Yii2:
+            part: [orm, email]
