--- a/api/tests/api.suite.yml
+++ b/api/tests/api.suite.yml
@@ -2,10 +2,11 @@ class_name: ApiTester
 modules:
     enabled:
         - REST:
-            url: /v1
-            depends: Yii2
+            depends: PhpBrowser
             part: Json
         - \Helper\Api
     config:
-        - Yii2
-            entryUrl: http://bugitor.dev
+        PhpBrowser:
+            url: 'http://bugitor.dev'
+        REST:
+            url: 'http://bugitor.dev/v1'
