API tests: use localhost:8080 instead of domain

--- a/api/tests/api.suite.yml
+++ b/api/tests/api.suite.yml
@@ -7,6 +7,6 @@ modules:
         - \Helper\Api
     config:
         PhpBrowser:
-            url: 'http://bugitor.dev'
+            url: 'http://localhost:8080'
         REST:
-            url: 'http://bugitor.dev/v1'
+            url: 'http://localhost:8080/v1'
