Auth using simple QueryParamAuth

--- a/api/web/.htaccess
+++ b/api/web/.htaccess
@@ -1,8 +1,6 @@
 # Apache Configuration File
 
-# (!) Using `.htaccess` files slows down Apache, therefore, if you have access
-# to the main server config file (usually called `httpd.conf`), you should add
-# this logic there: http://httpd.apache.org/docs/current/howto/htaccess.html.
+SetEnvIf Authorization .+ HTTP_AUTHORIZATION=$0
 
 <IfModule mod_rewrite.c>
     # Enable URL rewriting
